show list of facilities for company
