# src/api/model/apiGeoAddress.ts
@@ -28,6 +28,10 @@ export interface ApiGeoAddress {
      */
     address?: string;
     /**
+     * Village cell
+     */
+    cell?: string;
+    /**
      * city
      */
     city?: string;
@@ -41,9 +45,17 @@ export interface ApiGeoAddress {
      */
     longitude?: number;
     /**
+     * Village sector
+     */
+    sector?: string;
+    /**
      * state / province / region
      */
     state?: string;
+    /**
+     * Village name
+     */
+    village?: string;
     /**
      * ZIP / postal code / p.p. box
      */
@@ -63,6 +75,10 @@ export namespace ApiGeoAddress {
          */
         address = 'address',
         /**
+         * Village cell
+         */
+        cell = 'cell',
+        /**
          * city
          */
         city = 'city',
@@ -76,9 +92,17 @@ export namespace ApiGeoAddress {
          */
         longitude = 'longitude',
         /**
+         * Village sector
+         */
+        sector = 'sector',
+        /**
          * state / province / region
          */
         state = 'state',
+        /**
+         * Village name
+         */
+        village = 'village',
         /**
          * ZIP / postal code / p.p. box
          */
@@ -96,6 +120,17 @@ export namespace ApiGeoAddress {
                     isEnum: false,
                     required: false,
                     name: 'address',
+                    classname: 'ApiGeoAddress',
+                    dataType: 'string',
+                    isPrimitiveType: true,
+                    isListContainer: false,
+                    complexType: ''
+                },
+                {
+                    isReadOnly: false,
+                    isEnum: false,
+                    required: false,
+                    name: 'cell',
                     classname: 'ApiGeoAddress',
                     dataType: 'string',
                     isPrimitiveType: true,
@@ -151,7 +186,29 @@ export namespace ApiGeoAddress {
                     isReadOnly: false,
                     isEnum: false,
                     required: false,
+                    name: 'sector',
+                    classname: 'ApiGeoAddress',
+                    dataType: 'string',
+                    isPrimitiveType: true,
+                    isListContainer: false,
+                    complexType: ''
+                },
+                {
+                    isReadOnly: false,
+                    isEnum: false,
+                    required: false,
                     name: 'state',
+                    classname: 'ApiGeoAddress',
+                    dataType: 'string',
+                    isPrimitiveType: true,
+                    isListContainer: false,
+                    complexType: ''
+                },
+                {
+                    isReadOnly: false,
+                    isEnum: false,
+                    required: false,
+                    name: 'village',
                     classname: 'ApiGeoAddress',
                     dataType: 'string',
                     isPrimitiveType: true,
@@ -173,6 +230,8 @@ export namespace ApiGeoAddress {
             validators: {
                 address: [
                 ],
+                cell: [
+                ],
                 city: [
                 ],
                 country: [
@@ -181,7 +240,11 @@ export namespace ApiGeoAddress {
                 ],
                 longitude: [
                 ],
+                sector: [
+                ],
                 state: [
+                ],
+                village: [
                 ],
                 zip: [
                 ],
@@ -193,6 +256,9 @@ export namespace ApiGeoAddress {
   //     validators: [],
   //     fields: {
   //               address: {
+  //                   validators: []
+  //               },
+  //               cell: {
   //                   validators: []
   //               },
   //               city: {
@@ -207,7 +273,13 @@ export namespace ApiGeoAddress {
   //               longitude: {
   //                   validators: []
   //               },
+  //               sector: {
+  //                   validators: []
+  //               },
   //               state: {
+  //                   validators: []
+  //               },
+  //               village: {
   //                   validators: []
   //               },
   //               zip: {
